@@ -294,6 +294,7 @@ static void on_remove_item_activate(GtkMenuItem * menuitem, gpointer data)
 #endif				/* USE_OLD_GAL */
 		list = g_list_append(list, item_name);
 	}
+	
 	if (group_num == groupnum0) {
 		if (e_shortcut_bar_get_view_type
 		    (E_SHORTCUT_BAR(shortcut_bar),
@@ -334,9 +335,12 @@ static void on_remove_item_activate(GtkMenuItem * menuitem, gpointer data)
 			saveshortcutbarSW("Dictionaries.conf", group_name,
 					  list, "0");
 	}
-	g_list_free(list);
-	g_free(item_url);
-	g_free(item_name);
+	
+	if(number_of_items > 0) {
+		g_list_free(list);
+		g_free(item_url);
+		g_free(item_name);
+	}
 }
 
 
@@ -705,65 +709,71 @@ on_shortcut_bar_item_selected(EShortcutBar * shortcut_bar,
 	GtkWidget *app;
 	gchar *type, *ref;
 	gchar modName[16];
+	gint remItemNum = 0;
 	GdkPixbuf *icon_pixbuf = NULL;
-	if(item_num > -1) {
+	
+	remItemNum = item_num;
+	
+	
 		if (event->button.button == 1) {
-			app = gtk_widget_get_toplevel(GTK_WIDGET(shortcut_bar));
+			if(item_num > -1) {
+				app = gtk_widget_get_toplevel(GTK_WIDGET(shortcut_bar));
 #ifdef USE_OLD_GAL
-			e_shortcut_model_get_item_info(E_SHORTCUT_BAR
+				e_shortcut_model_get_item_info(E_SHORTCUT_BAR
 						       (shortcut_bar)->model,
 						       group_num, item_num, &type,
 						       &ref);
 #else				/* USE_OLD_GAL */
-			e_shortcut_model_get_item_info(E_SHORTCUT_BAR
+				e_shortcut_model_get_item_info(E_SHORTCUT_BAR
 						       (shortcut_bar)->model,
 						       group_num, item_num, &type,
 						       &ref, &icon_pixbuf);
 #endif				/* USE_OLD_GAL */
-			memset(modName, 0, 16);
-			modNameFromDesc(modName, ref);
-			if (group_num == groupnum0) {
-				gint sbtype;
-				sbtype = sbtypefromModNameSBSW(modName);
-				if (sbtype == 0 || sbtype == 1)
-					gotoBookmarkSWORD(modName,
+				memset(modName, 0, 16);
+				modNameFromDesc(modName, ref);
+				if (group_num == groupnum0) {
+					gint sbtype;
+					sbtype = sbtypefromModNameSBSW(modName);
+					if (sbtype == 0 || sbtype == 1)
+						gotoBookmarkSWORD(modName,
 							  settings->currentverse);
-				else
-					gotoBookmarkSWORD(modName,
-							  settings->dictkey);
-			}
-			if (group_num == groupnum1) {
-				if (havebible) {
-					gotoBookmarkSWORD(modName,
-							  settings->currentverse);
-				}
-			}
-			if (group_num == groupnum2) {
-				if (havecomm) {
-					gotoBookmarkSWORD(modName,
-							  settings->currentverse);
-				}
-			}
-			if (group_num == groupnum3) {
-				if (havedict) {
-					gotoBookmarkSWORD(modName,
+					else
+						gotoBookmarkSWORD(modName,
 							  settings->dictkey);
 				}
+				if (group_num == groupnum1) {
+					if (havebible) {
+						gotoBookmarkSWORD(modName,
+							  settings->currentverse);
+					}
+				}
+				if (group_num == groupnum2) {
+					if (havecomm) {
+						gotoBookmarkSWORD(modName,
+							  settings->currentverse);
+					}
+				}
+				if (group_num == groupnum3) {
+					if (havedict) {
+						gotoBookmarkSWORD(modName,
+							  settings->dictkey);
+					}
+				}
+				if (group_num == groupnum4) {
+					changeVerseSWORD(ref);
+				}
+				g_free(type);
+				g_free(ref);
 			}
-			if (group_num == groupnum4) {
-				changeVerseSWORD(ref);
-			}
-			g_free(type);
-			g_free(ref);
 		} else if (event->button.button == 3) {
-			if (item_num == -1)
+			if (remItemNum == -1)
 				show_standard_popup(shortcut_bar, event,
 						    group_num);
 			else
 				show_context_popup(shortcut_bar, event, group_num,
 						   item_num);
 		}
-	}
+	
 }
 
 static void on_btnSearch_clicked(GtkButton * button, SETTINGS * s)
